2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.h: Fix old comment to be up-to-date.

2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-ui.cpp: Fix #if condition.

2010-05-20  Alan McGovern  <amcgovern@novell.com>

	* error.cpp: Lets try not leaking GCHandles forever :)

2010-05-18  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (PasswordBox::SyncText): Sync the
	DisplayText *before* syncing the PasswordProperty value so that
	the TextBoxView will use the updated DisplayText value rather than
	the old value.
	(PasswordBox::OnPropertyChanged): Fixed a copy/paste bug.

2010-05-17  Alan McGovern  <amcgovern@novell.com>

	* xaml.cpp: Revert the change in 157438 - this value doesn't
	  need to be deleted, the XamlElementInstance keeps it.

2010-05-17  Alan McGovern  <amcgovern@novell.com>

	* xaml.cpp: make sure we clean up the value we get from
	  value_from_str.

2010-05-17  Alan McGovern  <amcgovern@novell.com>

	* value.cpp:
	* value.h.in: Add pinvokes for value_delete_value so that
	  managed land can correctly free Value*s it gets from native.

2010-05-16  Alan McGovern  <amcgovern@novell.com>

	* value.cpp:
	* value.h.in: Add a value_delete_value which we can use in our
	  ghashtable dtors.

	* provider.cpp: Use value_delete_value, not value_free_value.
	  We do actually want the value* itself freed :)

	* dependencyproperty.h:
	* dependencyproperty.cpp: Use value_delete_value instead of a
	  custom 'free_value' function for the default value overrides
	  table.

	* dependencyobject.cpp: The local_values hash should use
	  value_delete_value too.

2010-05-14  Jeffrey Stedfast  <fejj@novell.com>

	* provider.cpp (InheritedPropertyValueProvider::MapPropertyToDescendant):
	Fix mappings for FlowDirection and Language properties.
	(propagate_to_inlines): Don't proagate to children who don't
	support the property. Also fixed to recurse and children that
	contain inlines or blocks themselves.